@@ -87,6 +87,7 @@ def iconfig(lib, **kwargs):
         choose_item_func = lambda x, y: importer.action.SKIP,
         timid = False,
         query = None,
+        incremental = False,
     )
     for k, v in kwargs.items():
         setattr(config, k, v)
